--- a/nodejs-app/nodejs-alert.yaml
+++ b/nodejs-app/nodejs-alert.yaml
@@ -1,1 +1,20 @@
 
+apiVersion: monitoring.coreos.com/v1
+kind: PrometheusRule
+metadata:
+  name: nodejs-alert
+  namespace: monitoring
+  labels:
+    release: prometheus
+spec:
+  groups:
+  - name: nodejs-alert
+    rules:
+    - alert: HighRequestRate_NodeJS
+      expr: rate(http_requests_root_total[5m]) > 10
+      for: 0m
+      labels:
+        app: nodejs
+      annotations:
+        summary: "High request rate on root path"
+        description: "The request rate to the root path has exceeded 10 requests per 5m."
